# iroha-ebpf-prototype

./: README.md
example/: package-lock.json
example/src/program-rust/: Cargo.toml  Xargo.toml
example/src/program-rust/src/: lib.rs
example/src/sdk/: Cargo.toml
example/src/sdk/src/: lib.rs
iroha/: Cargo.toml
iroha/src/: client.rs  lib.rs  main.rs  syscalls.rs  translation.rs
