[package]
name = "helloworld"
version = "0.1.0"
authors = ["i1i1 <vanyarybin1@live.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdk = { path = "../sdk" }

[features]
no-entrypoint = []

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
